--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -1,144 +1,44 @@
+
+
+
+
 # .github/workflows/build_ios.yml
 
 name: Deploy iOS App to App Store
-
 on:
   push:
     branches:
       - development
-  workflow_dispatch:
-
-env:
-  APP_IDENTIFIER: com.otobix.auctionapp         # <-- your bundle id
-  IOS_SCHEME: Runner                            # <-- your Xcode scheme (Flutter default)
-  IOS_WORKSPACE: ios/Runner.xcworkspace        # Flutter uses workspace
-  IOS_CONFIGURATION: Release
-  APPLE_TEAM_ID: 734JT7MU9R                     # <-- e.g. 1A2BC3D4EF (put real value)
-  MATCH_GIT_URL: ${{ secrets.MATCH_GIT_URL }}   # Git repo for match
-  MATCH_GIT_BRANCH: ios_signing
-
 jobs:
-  build-and-upload-ios:
+  build:
     name: Build & Upload to TestFlight
     runs-on: macos-latest
-    timeout-minutes: 60
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      # Setup Ruby (for Fastlane)
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.2'
-          bundler-cache: true
-
-      - name: Install Fastlane
-        run: gem install fastlane --no-document
-
-      # Setup Node.js (needed to generate API key JSON)
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
-      # Setup Flutter
-      - name: Setup Flutter
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.35.2"
-
-      - name: Flutter pub get
+          flutter-version: "3.24.3"  # or your version
+      - name: Install dependencies
         run: flutter pub get
-
-      # Cache CocoaPods
-      - name: Cache CocoaPods
-        uses: actions/cache@v4
-        with:
-          path: |
-            ios/Pods
-            ~/Library/Caches/CocoaPods
-            ~/.cocoapods
-          key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
-
-      - name: Install CocoaPods
-        working-directory: ios
-        run: pod install --repo-update
-
-      # Create App Store Connect API key JSON from .p8 secret
-      - name: Create ASC API key file from P8 secret
+      - name: Build iOS app
+        run: |
+          cd ios
+          pod install
+          cd ..
+      - name: Install Fastlane
+        run: sudo gem install fastlane -NV
+      - name: Build and upload to TestFlight
         env:
-          ISSUER_ID: ${{ secrets.APPSTORE_ISSUER_ID }}
-          KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}
-          IN_HOUSE: false
-          P8_CONTENT: ${{ secrets.APPSTORE_P8 }}
+          APP_STORE_P8_KEY: ${{ secrets.APPSTORE_P8 }}
+          APP_STORE_KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}
+          APP_STORE_ISSUER_ID: ${{ secrets.APPSTORE_ISSUER_ID }}
         run: |
-          node -e "
-          const fs = require('fs');
-          const json = {
-            issuer_id: process.env.ISSUER_ID,
-            key_id: process.env.KEY_ID,
-            in_house: process.env.IN_HOUSE === 'true',
-            key: process.env.P8_CONTENT.replace(/\r?\n/g,'\\n')
-          };
-          fs.writeFileSync('fastlane_api_key.json', JSON.stringify(json));
-          console.log('✅ fastlane_api_key.json created from P8 secret!');
-          "
-
-      # Configure CI keychain for code signing
-      - name: Create CI keychain
-        run: |
-          security create-keychain -p "${{ secrets.CI_KEYCHAIN_PASSWORD }}" build.keychain
-          security set-keychain-settings -lut 21600 build.keychain
-          security unlock-keychain -p "${{ secrets.CI_KEYCHAIN_PASSWORD }}" build.keychain
-          security list-keychains -d user -s build.keychain $(security list-keychains -d user | sed 's/[",]//g')
-          security default-keychain -s build.keychain
-
-      # Fetch signing certificates & profiles
-      - name: Fetch signing assets with match (appstore)
-        env:
-          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
-          APP_STORE_CONNECT_API_KEY_PATH: ${{ github.workspace }}/fastlane_api_key.json
-          CI_KEYCHAIN_PASSWORD: ${{ secrets.CI_KEYCHAIN_PASSWORD }}
-        run: |
-          echo "Using APP_IDENTIFIER=$APP_IDENTIFIER"
-          fastlane match appstore \
-            --app_identifier "$APP_IDENTIFIER" \
-            --readonly false \
-            --git_url "$MATCH_GIT_URL" \
-            --git_branch "$MATCH_GIT_BRANCH" \
-            --keychain_name build.keychain \
-            --keychain_password "$CI_KEYCHAIN_PASSWORD" \
-            --api_key_path "$APP_STORE_CONNECT_API_KEY_PATH"
+          cd ios
+          fastlane beta
 
 
-      # Build signed IPA using Flutter
-      - name: Build signed IPA
-        env:
-          APP_STORE_CONNECT_API_KEY_PATH: ${{ github.workspace }}/fastlane_api_key.json
-        run: flutter build ipa --release
-
-      # Upload to TestFlight
-      - name: Upload to TestFlight
-        run: |
-          IPA_PATH=$(ls -t build/ios/ipa/*.ipa | head -n 1)
-          echo "Uploading $IPA_PATH to TestFlight…"
-          fastlane pilot upload \
-            --api_key_path fastlane_api_key.json \
-            --ipa "$IPA_PATH" \
-            --skip_waiting_for_build_processing true \
-            --distribute_external true \
-            --uses_non_exempt_encryption false
-
-      # Optional: delete CI keychain after job
-      - name: Delete CI keychain
-        if: always()
-        run: security delete-keychain build.keychain
 
 
 
@@ -149,18 +49,16 @@ jobs:
 # on:
 #   push:
 #     branches:
-#       # - main
 #       - development
 #   workflow_dispatch:
 
 # env:
 #   APP_IDENTIFIER: com.otobix.auctionapp         # <-- your bundle id
 #   IOS_SCHEME: Runner                            # <-- your Xcode scheme (Flutter default)
-#   IOS_WORKSPACE: ios/Runner.xcworkspace         # Flutter uses workspace
+#   IOS_WORKSPACE: ios/Runner.xcworkspace        # Flutter uses workspace
 #   IOS_CONFIGURATION: Release
-#   APPLE_TEAM_ID: 734JT7MU9R                   # <-- e.g. 1A2BC3D4EF (put real value)
-#   # MATCH_GIT_URL: ${{ github.server_url }}/${{ github.repository }} # same repo
-#   MATCH_GIT_URL: ${{ secrets.MATCH_GIT_URL }} # same repo
+#   APPLE_TEAM_ID: 734JT7MU9R                     # <-- e.g. 1A2BC3D4EF (put real value)
+#   MATCH_GIT_URL: ${{ secrets.MATCH_GIT_URL }}   # Git repo for match
 #   MATCH_GIT_BRANCH: ios_signing
 
 # jobs:
@@ -173,9 +71,9 @@ jobs:
 #       - name: Checkout repository
 #         uses: actions/checkout@v4
 #         with:
-#           fetch-depth: 0  # match needs full history/branches
+#           fetch-depth: 0
 
-#       # Setup Ruby (for fastlane) with caching
+#       # Setup Ruby (for Fastlane)
 #       - name: Setup Ruby
 #         uses: ruby/setup-ruby@v1
 #         with:
@@ -183,8 +81,13 @@ jobs:
 #           bundler-cache: true
 
 #       - name: Install Fastlane
-#         run: |
-#           gem install fastlane --no-document
+#         run: gem install fastlane --no-document
+
+#       # Setup Node.js (needed to generate API key JSON)
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: '20'
 
 #       # Setup Flutter
 #       - name: Setup Flutter
@@ -195,7 +98,7 @@ jobs:
 #       - name: Flutter pub get
 #         run: flutter pub get
 
-#       # CocoaPods cache speeds up iOS builds
+#       # Cache CocoaPods
 #       - name: Cache CocoaPods
 #         uses: actions/cache@v4
 #         with:
@@ -211,12 +114,27 @@ jobs:
 #         working-directory: ios
 #         run: pod install --repo-update
 
-#       # Write App Store Connect API key file used by fastlane (pilot/deliver)
-#       - name: Create ASC API key file
+#       # Create App Store Connect API key JSON from .p8 secret
+#       - name: Create ASC API key file from P8 secret
+#         env:
+#           ISSUER_ID: ${{ secrets.APPSTORE_ISSUER_ID }}
+#           KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}
+#           IN_HOUSE: false
+#           P8_CONTENT: ${{ secrets.APPSTORE_P8 }}
 #         run: |
-#           echo "${{ secrets.ASC_API_KEY_JSON }}" > fastlane_api_key.json
+#           node -e "
+#           const fs = require('fs');
+#           const json = {
+#             issuer_id: process.env.ISSUER_ID,
+#             key_id: process.env.KEY_ID,
+#             in_house: process.env.IN_HOUSE === 'true',
+#             key: process.env.P8_CONTENT.replace(/\r?\n/g,'\\n')
+#           };
+#           fs.writeFileSync('fastlane_api_key.json', JSON.stringify(json));
+#           console.log('✅ fastlane_api_key.json created from P8 secret!');
+#           "
 
-#       # Configure keychain for code signing (used by match to import certs/profiles)
+#       # Configure CI keychain for code signing
 #       - name: Create CI keychain
 #         run: |
 #           security create-keychain -p "${{ secrets.CI_KEYCHAIN_PASSWORD }}" build.keychain
@@ -225,46 +143,31 @@ jobs:
 #           security list-keychains -d user -s build.keychain $(security list-keychains -d user | sed 's/[",]//g')
 #           security default-keychain -s build.keychain
 
-#       # Pull certs & provisioning profiles from the ios_signing branch via fastlane match
+#       # Fetch signing certificates & profiles
 #       - name: Fetch signing assets with match (appstore)
 #         env:
 #           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
 #           APP_STORE_CONNECT_API_KEY_PATH: ${{ github.workspace }}/fastlane_api_key.json
+#           CI_KEYCHAIN_PASSWORD: ${{ secrets.CI_KEYCHAIN_PASSWORD }}
 #         run: |
+#           echo "Using APP_IDENTIFIER=$APP_IDENTIFIER"
 #           fastlane match appstore \
-#             app_identifier:$APP_IDENTIFIER \
-#             readonly:false \
-#             git_url:$MATCH_GIT_URL \
-#             git_branch:$MATCH_GIT_BRANCH \
-#             keychain_name:build.keychain \
-#             keychain_password:${{ secrets.CI_KEYCHAIN_PASSWORD }} \
-#             api_key_path:$APP_STORE_CONNECT_API_KEY_PATH
+#             --app_identifier "$APP_IDENTIFIER" \
+#             --readonly false \
+#             --git_url "$MATCH_GIT_URL" \
+#             --git_branch "$MATCH_GIT_BRANCH" \
+#             --keychain_name build.keychain \
+#             --keychain_password "$CI_KEYCHAIN_PASSWORD" \
+#             --api_key_path "$APP_STORE_CONNECT_API_KEY_PATH"
 
 
-#       # - name: Fetch signing assets with match (appstore)
-#       #   env:
-#       #     FASTLANE_USER: ${{ secrets.APPLE_ID }}
-#       #     MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
-#       #   run: |
-#       #     fastlane run match \
-#       #       type:appstore \
-#       #       app_identifier:$APP_IDENTIFIER \
-#       #       readonly:false \
-#       #       git_url:$MATCH_GIT_URL \
-#       #       git_branch:$MATCH_GIT_BRANCH \
-#       #       keychain_name:build.keychain \
-#       #       keychain_password:${{ secrets.CI_KEYCHAIN_PASSWORD }}
-
-#       # Build a signed IPA (Flutter -> Xcode)
+#       # Build signed IPA using Flutter
 #       - name: Build signed IPA
 #         env:
 #           APP_STORE_CONNECT_API_KEY_PATH: ${{ github.workspace }}/fastlane_api_key.json
-#         run: |
-#           # Ensure Xcode uses correct team and signing style (project should already be set)
-#           # Build IPA with Flutter (codesigning handled by Xcode using matched profiles)
-#           flutter build ipa --release
+#         run: flutter build ipa --release
 
-#       # Upload to TestFlight using fastlane pilot
+#       # Upload to TestFlight
 #       - name: Upload to TestFlight
 #         run: |
 #           IPA_PATH=$(ls -t build/ios/ipa/*.ipa | head -n 1)
@@ -276,14 +179,155 @@ jobs:
 #             --distribute_external true \
 #             --uses_non_exempt_encryption false
 
-#     #  When deploy for production then uncomment this and comment out above upload to testflight using fastlane pilot thing
-#       # - name: Upload to App Store (submit for review)
-#       #   run: |
-#       #     IPA_PATH=$(ls -t build/ios/ipa/*.ipa | head -n 1)
-#       #     fastlane deliver \
-#       #       --api_key_path fastlane_api_key.json \
-#       #       --ipa "$IPA_PATH" \
-#       #       --submit_for_review true \
-#       #       --automatic_release true \
-#       #       --skip_screenshots true \
-#       #       --skip_metadata true
+#       # Optional: delete CI keychain after job
+#       - name: Delete CI keychain
+#         if: always()
+#         run: security delete-keychain build.keychain
+
+
+
+# # # .github/workflows/build_ios.yml
+
+# # name: Deploy iOS App to App Store
+
+# # on:
+# #   push:
+# #     branches:
+# #       # - main
+# #       - development
+# #   workflow_dispatch:
+
+# # env:
+# #   APP_IDENTIFIER: com.otobix.auctionapp         # <-- your bundle id
+# #   IOS_SCHEME: Runner                            # <-- your Xcode scheme (Flutter default)
+# #   IOS_WORKSPACE: ios/Runner.xcworkspace         # Flutter uses workspace
+# #   IOS_CONFIGURATION: Release
+# #   APPLE_TEAM_ID: 734JT7MU9R                   # <-- e.g. 1A2BC3D4EF (put real value)
+# #   # MATCH_GIT_URL: ${{ github.server_url }}/${{ github.repository }} # same repo
+# #   MATCH_GIT_URL: ${{ secrets.MATCH_GIT_URL }} # same repo
+# #   MATCH_GIT_BRANCH: ios_signing
+
+# # jobs:
+# #   build-and-upload-ios:
+# #     name: Build & Upload to TestFlight
+# #     runs-on: macos-latest
+# #     timeout-minutes: 60
+
+# #     steps:
+# #       - name: Checkout repository
+# #         uses: actions/checkout@v4
+# #         with:
+# #           fetch-depth: 0  # match needs full history/branches
+
+# #       # Setup Ruby (for fastlane) with caching
+# #       - name: Setup Ruby
+# #         uses: ruby/setup-ruby@v1
+# #         with:
+# #           ruby-version: '3.2'
+# #           bundler-cache: true
+
+# #       - name: Install Fastlane
+# #         run: |
+# #           gem install fastlane --no-document
+
+# #       # Setup Flutter
+# #       - name: Setup Flutter
+# #         uses: subosito/flutter-action@v2
+# #         with:
+# #           flutter-version: "3.35.2"
+
+# #       - name: Flutter pub get
+# #         run: flutter pub get
+
+# #       # CocoaPods cache speeds up iOS builds
+# #       - name: Cache CocoaPods
+# #         uses: actions/cache@v4
+# #         with:
+# #           path: |
+# #             ios/Pods
+# #             ~/Library/Caches/CocoaPods
+# #             ~/.cocoapods
+# #           key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
+# #           restore-keys: |
+# #             ${{ runner.os }}-pods-
+
+# #       - name: Install CocoaPods
+# #         working-directory: ios
+# #         run: pod install --repo-update
+
+# #       # Write App Store Connect API key file used by fastlane (pilot/deliver)
+# #       - name: Create ASC API key file
+# #         run: |
+# #           echo "${{ secrets.ASC_API_KEY_JSON }}" > fastlane_api_key.json
+
+# #       # Configure keychain for code signing (used by match to import certs/profiles)
+# #       - name: Create CI keychain
+# #         run: |
+# #           security create-keychain -p "${{ secrets.CI_KEYCHAIN_PASSWORD }}" build.keychain
+# #           security set-keychain-settings -lut 21600 build.keychain
+# #           security unlock-keychain -p "${{ secrets.CI_KEYCHAIN_PASSWORD }}" build.keychain
+# #           security list-keychains -d user -s build.keychain $(security list-keychains -d user | sed 's/[",]//g')
+# #           security default-keychain -s build.keychain
+
+# #       # Pull certs & provisioning profiles from the ios_signing branch via fastlane match
+# #       - name: Fetch signing assets with match (appstore)
+# #         env:
+# #           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+# #           APP_STORE_CONNECT_API_KEY_PATH: ${{ github.workspace }}/fastlane_api_key.json
+# #         run: |
+# #           fastlane match appstore \
+# #             app_identifier:$APP_IDENTIFIER \
+# #             readonly:false \
+# #             git_url:$MATCH_GIT_URL \
+# #             git_branch:$MATCH_GIT_BRANCH \
+# #             keychain_name:build.keychain \
+# #             keychain_password:${{ secrets.CI_KEYCHAIN_PASSWORD }} \
+# #             api_key_path:$APP_STORE_CONNECT_API_KEY_PATH
+
+
+# #       # - name: Fetch signing assets with match (appstore)
+# #       #   env:
+# #       #     FASTLANE_USER: ${{ secrets.APPLE_ID }}
+# #       #     MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+# #       #   run: |
+# #       #     fastlane run match \
+# #       #       type:appstore \
+# #       #       app_identifier:$APP_IDENTIFIER \
+# #       #       readonly:false \
+# #       #       git_url:$MATCH_GIT_URL \
+# #       #       git_branch:$MATCH_GIT_BRANCH \
+# #       #       keychain_name:build.keychain \
+# #       #       keychain_password:${{ secrets.CI_KEYCHAIN_PASSWORD }}
+
+# #       # Build a signed IPA (Flutter -> Xcode)
+# #       - name: Build signed IPA
+# #         env:
+# #           APP_STORE_CONNECT_API_KEY_PATH: ${{ github.workspace }}/fastlane_api_key.json
+# #         run: |
+# #           # Ensure Xcode uses correct team and signing style (project should already be set)
+# #           # Build IPA with Flutter (codesigning handled by Xcode using matched profiles)
+# #           flutter build ipa --release
+
+# #       # Upload to TestFlight using fastlane pilot
+# #       - name: Upload to TestFlight
+# #         run: |
+# #           IPA_PATH=$(ls -t build/ios/ipa/*.ipa | head -n 1)
+# #           echo "Uploading $IPA_PATH to TestFlight…"
+# #           fastlane pilot upload \
+# #             --api_key_path fastlane_api_key.json \
+# #             --ipa "$IPA_PATH" \
+# #             --skip_waiting_for_build_processing true \
+# #             --distribute_external true \
+# #             --uses_non_exempt_encryption false
+
+# #     #  When deploy for production then uncomment this and comment out above upload to testflight using fastlane pilot thing
+# #       # - name: Upload to App Store (submit for review)
+# #       #   run: |
+# #       #     IPA_PATH=$(ls -t build/ios/ipa/*.ipa | head -n 1)
+# #       #     fastlane deliver \
+# #       #       --api_key_path fastlane_api_key.json \
+# #       #       --ipa "$IPA_PATH" \
+# #       #       --submit_for_review true \
+# #       #       --automatic_release true \
+# #       #       --skip_screenshots true \
+# #       #       --skip_metadata true
